# ABRAXAS

./: .gitignore  COMMIT_MESSAGE.txt  Makefile  README.md  abraxas  abraxas.service  install.py  test.py
ABRAXAS/: install.py
ABRAXAS/include/: sigmoid.h
ABRAXAS/libmeridian/src/: gamma_auto.c  gamma_gnome.c
ABRAXAS/src/: sigmoid.c  solar.c  zipdb.c
c23/: C23_CPP23_SAFETY_REFERENCE.md  Makefile
c23/include/: abraxas.h  config.h  landlock.h  seccomp.h  solar.h  uring.h  weather.h  zipdb.h
c23/libmeridian/: Makefile
c23/libmeridian/include/: meridian.h
c23/libmeridian/src/: colorramp.c  gamma_auto.c  gamma_drm.c  gamma_gnome.c  gamma_wl.c  gamma_x11.c
c23/libmeridian/src/wayland/: wlr-gamma-control-unstable-v1.xml
c23/src/: config.c  daemon.c  json.c  landlock.c  main.c  seccomp.c  sigmoid.c  uring.c  weather.c
include/: daemon.h  json.h  weather.h
libmeridian/: Makefile
libmeridian/include/: meridian.h
libmeridian/src/: colorramp.c  gamma_drm.c  gamma_wl.c  gamma_x11.c
rust/: Cargo.toml
rust/src/: config.rs  daemon.rs  landlock.rs  main.rs  seccomp.rs  sigmoid.rs  solar.rs  uring.rs  weather.rs  zipdb.rs
rust/src/gamma/: colorramp.rs  drm.rs  gnome.rs  mod.rs  wayland.rs  x11.rs
src/: config.c  daemon.c  main.c  weather.c
