[package]
name = "abraxas"
version = "5.1.0"
edition = "2021"
description = "Dynamic color temperature daemon with weather awareness"

[dependencies]
nix = { version = "0.29", features = ["ioctl", "signal", "fs", "event"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[dependencies.ureq]
version = "2"
features = ["json"]
optional = true

[dependencies.wayland-client]
version = "0.31"
optional = true

[dependencies.wayland-protocols-wlr]
version = "0.3"
features = ["client"]
optional = true

[dependencies.x11rb]
version = "0.13"
features = ["randr"]
optional = true

[features]
default = ["noaa", "x11"]
noaa = ["ureq"]
wayland = ["wayland-client", "wayland-protocols-wlr"]
x11 = ["x11rb"]
gnome = []

[profile.release]
opt-level = 2
strip = true
lto = true
